# OpenGE

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  OpenGE.sublime-project  README.md
Engine/: README.md
Engine/Assets/: Asset.hpp  RenderizableAsset.hpp  Sprite.cpp  Sprite.hpp
Engine/Components/: BoxCollider.cpp  BoxCollider.hpp  Component.hpp  LuaScript.cpp  LuaScript.hpp  Physics.cpp  Physics.hpp  Script.cpp  Script.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Transform.cpp  Transform.hpp
Engine/Core/: Color.cpp  Color.hpp  EventManager.cpp  EventManager.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  README.md  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Scripting.cpp  Scripting.hpp  Settings.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
Engine/Core/Collisions/: Box.cpp  Box.hpp  Circle.cpp  Circle.hpp  Geometry.hpp
Engine/Core/Math/: Math.cpp  Math.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
Engine/Libraries/: Libraries.hpp
Engine/Systems/: Collisions.cpp  Collisions.hpp  LuaScripting.cpp  LuaScripting.hpp  Physics.cpp  Physics.hpp  ScriptProcessing.cpp  ScriptProcessing.hpp  SpriteRendering.cpp  SpriteRendering.hpp
Engine/Tools/: README.md
Game/: README.md  TestGame.cpp  TestGame.hpp  main.cpp
Game/Assets/Scripts/: ClassExample.lua  FixedMovement.lua  PlayerController.lua  RocketController.lua  test.lua
Game/Assets/Sprites/: Missing_Image.json  Player Ship.json  Rocket.json  Shoot.json  template.json  test_background.json
Game/Assets/Sprites/Asteroids/: Asteroids_Red.json
Game/Scenes/: Asteroids.json  TestScene.hpp  TestScene.json
